# Sakora-brandnew

./: .gitignore  CMakeLists.txt  License  README.md  main.cpp
Backend/: ins.cpp  ins.h
Backend/env/: identifier.cpp  identifier.h  object.cpp  object.h  scope.cpp  scope.h  value.cpp  value.h
Backend/env/type/: sak_basic.h  sak_bool.cpp  sak_bool.h  sak_char.cpp  sak_char.h  sak_float.cpp  sak_float.h  sak_int.cpp  sak_int.h  sak_string.cpp  sak_string.h  sak_tid.cpp  sak_tid.h  type.h
Backend/vm/: vm.cpp  vm.h  vm_val.cpp  vm_val.h
Demos/: demo1.sak  demo2.sak  new.sacode  new_program.sacode  new_program.sak  test.sak
Error/: BasicError.h  LexerError.cpp  LexerError.h  ParserError.cpp  ParserError.h  VMError.cpp  VMError.h
Frontend/Console/: console.cpp  console.h
Frontend/Generator/: generator.cpp  generator.h
Frontend/Lexer/: lexer.cpp  lexer.h
Frontend/Parser/: GRAMMER.md  GRAMMER.txt  ast.cpp  ast.h  parser.cpp  parser.h
Interpreter/: instruction.cpp  instruction.h  object.h  scope.cpp  scope.h  type.cpp  type.h  value.cpp  value.h  visitor.cpp  visitor.h
Interpreter/vm/: thread.cpp  thread.h  vm.cpp  vm.h
complier/Console/: console.cpp  console.h
complier/Error/: BasicError.cpp  LexerError.cpp  ParserError.cpp  ParserError.h  VMError.cpp
complier/Frontend/Lexer/: lexer.cpp  lexer.h
complier/Frontend/Parser/: GRAMMER.md  ast.cpp  parser.cpp  parser.h
complier/ir/sakIR/: IRCode.cpp  IRCode.h  sakType.cpp  sakType.h  sakValue.cpp  sakValue.h
